kubernetes/kustomizations/vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
