kubernetes/kustomizations/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
      ingress: exposed
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
        ingress: exposed
    spec:
      priorityClassName: high-priority
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.35.7-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: "TCP"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
        - name: backup
          persistentVolumeClaim:
            claimName: vaultwarden-backup
        - name: rclone-conf
          secret:
            secretName: rclone-secret
        - name: tmp
          emptyDir: {}
