kubernetes/kustomizations/vaultwarden/vaultwarden.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
      ingress: exposed
  template:
    metadata:
      labels:
        app: vaultwarden
        ingress: exposed
    spec:
      priorityClassName: high-priority
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.33.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: "TCP"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 20001
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        runAsUser: 10001
        runAsGroup: 20001
        fsGroup: 20001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden
        - name: rclone-conf
          secret:
            secretName: rclone-secret
        - name: tmp
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden-http
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
  selector:
    app: vaultwarden
  type: ClusterIP
