kubernetes/kustomizations/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "e48d5ef2-41f9-4ca5-a8bf-f60af8d77921.cfargotunnel.com"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-cloudflare@kubernetescrd"
  labels:
    dns-type: external
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vault.zmuda.pro
      secretName: vaultwarden-tls
  rules:
    - host: vault.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-http
                port:
                  number: 80
