kubernetes/kustomizations/vaultwarden/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden-netpol
spec:
  endpointSelector:
    matchLabels:
      ingress: exposed
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: smtp.protonmail.ch
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
    - toFQDNs:
        - matchName: push.bitwarden.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    # Allow backup to Garage S3 on NAS (if backup feature enabled)
    - toCIDR:
        - 192.168.0.6/32
        - 192.168.0.7/32
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
