kubernetes/kustomizations/vaultwarden/nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vaultwarden-nwp
spec:
  podSelector:
    matchLabels:
      ingress: exposed
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              type: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kgateway-system
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-nwp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
